{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 50,
  "lineage": "13283893-bf28-bfe3-2c00-842de009a200",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "eshop-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797526292966:loadbalancer/eshop-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "eshop-elb-1133789167.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:5106/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "eshop-elb",
            "idle_timeout": 100,
            "instances": [
              "i-006418ece92883156",
              "i-007ba472cdd5044b3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5106,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "eshop-elb",
            "security_groups": [
              "sg-0a6ca66f6f8be1be6"
            ],
            "source_security_group": "797526292966/allow_http",
            "source_security_group_id": "sg-0a6ca66f6f8be1be6",
            "subnets": [
              "subnet-024bb9624a8036f85",
              "subnet-066ea6b1ff738d402"
            ],
            "tags": {
              "Name": "eshopform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:797526292966:instance/i-007ba472cdd5044b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007ba472cdd5044b3",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "eshop-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ed03f1a686099b6",
            "private_dns": "ip-10-20-1-46.ec2.internal",
            "private_ip": "10.20.1.46",
            "public_dns": "ec2-184-73-118-180.compute-1.amazonaws.com",
            "public_ip": "184.73.118.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fb81b25b22a866bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a6ca66f6f8be1be6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066ea6b1ff738d402",
            "tags": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6ca66f6f8be1be6"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:797526292966:instance/i-006418ece92883156",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006418ece92883156",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "eshop-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002d0a3bb26855cbf",
            "private_dns": "ip-10-20-2-125.ec2.internal",
            "private_ip": "10.20.2.125",
            "public_dns": "ec2-3-85-143-8.compute-1.amazonaws.com",
            "public_ip": "3.85.143.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-044103ec2cdb7e1e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a6ca66f6f8be1be6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024bb9624a8036f85",
            "tags": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6ca66f6f8be1be6"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eshop_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797526292966:internet-gateway/igw-08ab5e45e7fce79e3",
            "id": "igw-08ab5e45e7fce79e3",
            "owner_id": "797526292966",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e48d1e2f709523f8"
          },
          "dependencies": [
            "aws_vpc.eshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03212eef8a47194ff",
            "owner_id": "797526292966",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ab5e45e7fce79e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-0e48d1e2f709523f8"
          },
          "dependencies": [
            "aws_internet_gateway.eshop_igw",
            "aws_vpc.eshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27311d433e04b07",
            "route_table_id": "rtb-03212eef8a47194ff",
            "subnet_id": "subnet-066ea6b1ff738d402"
          },
          "dependencies": [
            "aws_internet_gateway.eshop_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.eshop_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b03d5f2b5039a148",
            "route_table_id": "rtb-03212eef8a47194ff",
            "subnet_id": "subnet-024bb9624a8036f85"
          },
          "dependencies": [
            "aws_internet_gateway.eshop_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.eshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797526292966:security-group/sg-0a6ca66f6f8be1be6",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6ca66f6f8be1be6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5106,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5106
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "797526292966",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e48d1e2f709523f8"
          },
          "dependencies": [
            "aws_vpc.eshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797526292966:subnet/subnet-066ea6b1ff738d402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-066ea6b1ff738d402",
            "map_public_ip_on_launch": true,
            "owner_id": "797526292966",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0e48d1e2f709523f8"
          },
          "dependencies": [
            "aws_vpc.eshop_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797526292966:subnet/subnet-024bb9624a8036f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-024bb9624a8036f85",
            "map_public_ip_on_launch": true,
            "owner_id": "797526292966",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0e48d1e2f709523f8"
          },
          "dependencies": [
            "aws_vpc.eshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eshop_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797526292966:vpc/vpc-0e48d1e2f709523f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-06e5684b92976fcfb",
            "default_route_table_id": "rtb-0cef95ca224613fcf",
            "default_security_group_id": "sg-0df28b2f98bb031bb",
            "dhcp_options_id": "dopt-0989208103abe3da3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e48d1e2f709523f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cef95ca224613fcf",
            "owner_id": "797526292966",
            "tags": {
              "Name": "EshopVPC"
            }
          }
        }
      ]
    }
  ]
}